--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
